--- a/signup.html
+++ b/signup.html
@@ -1,7 +1,7 @@
 <!Doctype html>
 <html>
 <head>
-<title>Registration</title>
+<title>signup</title>
 </head>
 <body style="background-color:pink">
 <br>
